Implementación de toda la sección de Tienda + su funcionalidad